# humanizer

./: .env  .gitignore  README.md  here.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup_database.sh  tox.ini
docs/: Postgres&Beyond.md  SavedSettings.txt
src/humanizer/: __init__.py
src/humanizer/cli/: __init__.py  analyze_cmd.py  config_cmd.py  db_cmd.py  embedding_cmd.py  export_markdown_cmd.py  import_cmd.py  list_cmd.py  main.py  project_cmd.py  search_cmd.py  types.py
src/humanizer/config/: __init__.py  database.py
src/humanizer/core/: __init__.py  types.py
src/humanizer/core/content/: __init__.py  analyzer.py  importer.py  processor.py
src/humanizer/core/embedding/: service.py
src/humanizer/core/search/: vector.py
src/humanizer/db/: __init__.py  session.py  setup.py
src/humanizer/db/models/: __init__.py  base.py  content.py
src/humanizer/parsers/: __init__.py  openai.py
src/humanizer/scripts/: manage_project.py  setup_db.py  setup_pemissions.py  setup_users.py  verify_config.py
src/humanizer/utils/: db_check.py  logging.py  project_manager.py
