[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "humanizer"
version = "0.1.1"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
description = "Conversation management and embedding tool"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.27.0",
    "pgvector>=0.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "ollama>=0.1.0",
    "cryptography>=41.0.0",
    "ijson>=3.2.0",
    "tabulate>=0.9.0",
]

[project.scripts]
humanizer = "humanizer.cli:cli"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
    "tox>=4.11.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/humanizer"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["pgvector.*", "ollama.*", "ijson.*"]
ignore_missing_imports = true
